# ruuvi.air.fw_loader

./: CMakeLists.txt  Kconfig  README.md  dts_common.overlay  dts_nrf52840dk.overlay  dts_nrf52840dk_hw2.overlay  dts_ruuviair.overlay  dts_ruuviair_hw2.overlay  prj.conf  sonar-project.properties  sysbuild.conf
.github/workflows/: code-style.yml  sonar-scan.yml
src/: fw_img_hw_rev.c  fw_img_hw_rev.h  fwloader_bluetooth.c  fwloader_bluetooth.h  fwloader_button.c  fwloader_button.h  fwloader_button_cb.c  fwloader_button_cb.h  fwloader_early_init.c  fwloader_err_handler.c  fwloader_ext_flash_power.c  fwloader_ext_flash_power.h  fwloader_fw_ver.c  fwloader_fw_ver.h  fwloader_gpio_input.c  fwloader_gpio_input.h  fwloader_led.c  fwloader_led.h  fwloader_led_err.c  fwloader_led_err.h  fwloader_mcumgr_mgmt_callbacks.c  fwloader_mcumgr_mgmt_callbacks.h  fwloader_rgb_led.c  fwloader_rgb_led.h  fwloader_segger_rtt.c  fwloader_segger_rtt.h  fwloader_settings.c  fwloader_settings.h  fwloader_supercap.c  fwloader_supercap.h  fwloader_watchdog.c  fwloader_watchdog.h  main.c  shell_cmd_ruuvi.c
